# razer-ctl

./: .gitignore  .goreleaser.yaml  99-razer.rules  CLAUDE.md  Cargo.toml  README.md  release-plz.toml
.beads/: issues.jsonl
.claude/: settings.local.json
.github/workflows/: ci.yml  issue-tracker.yml  publish.yml  release.yml
b-helper/: Cargo.toml
b-helper/src/: main.rs
bhelper/: CHANGELOG.md  Cargo.toml  README.md
bhelper/src/: config.rs  device.rs  error.rs  main.rs  settings.rs
blade-helper/: CHANGELOG.md  Cargo.toml  README.md
blade-helper/src/: cli.rs  device.rs  display.rs  error.rs
data/: README.md
librazer/: CHANGELOG.md  Cargo.toml  README.md
librazer/src/: command.rs  descriptor.rs  device.rs  error.rs  feature.rs  lib.rs  packet.rs  types.rs
razer-cli/: Cargo.toml
razer-cli/src/: main.rs
