[package]
name = "blade-helper"
version = "0.1.0"
edition = "2021"
description = "User-friendly CLI for controlling Razer laptop BIOS settings"
license = "MIT"
repository = "https://github.com/stvnksslr/razer-ctl"
publish = false

[dependencies]
librazer = { path = "../librazer", version = "0.7.0" }
clap = { version = "4.5.1", features = ["derive", "cargo"] }
anyhow = "1.0.80"
thiserror = "1.0"
log = "0.4.22"
env_logger = "0.11.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
confy = "0.6"
dirs = "5.0"
colored = "2.1"
