[package]
name = "librazer"
version = "0.7.2"
edition = "2021"
description = "Library for controlling Razer laptop BIOS settings via USB HID"
license = "MIT"
repository = "https://github.com/stvnksslr/razer-ctl"
keywords = ["razer", "blade", "laptop", "bios", "hid"]
categories = ["hardware-support"]
publish = true

[dependencies]
anyhow = "1.0.80"
bincode = "1.3.3"
clap = { version = "4.5.1", features = ["derive"] }
const-str = "0.5.7"
const_format = "0.2.32"
paste = "1.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.114"
strum = "0.26.1"
strum_macros = "0.26.1"
log = "0.4.22"
env_logger = "0.11.6"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.55", features = ["transactions"] }
hidapi = { version = "2.6.1", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2.6.1" }
